# CATChem

./: .codespellrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  lint.yml
cmake/: FindNetCDF.cmake
docs/: index.rst
docs/develop/: developers_guide.rst
docs2/: Doxyfile  README.md  Start.md  start.md
drivers/ccpp/: catchem_anthropogenic_wrapper.F90  catchem_diag_wrapper.F90  catchem_dmsemis_wrapper.F90  catchem_drydep_wrapper.F90  catchem_dust_wrapper.F90  catchem_gocart_wrapper.F90  catchem_plume_wrapper.F90  catchem_rad_wrapper.F90  catchem_seas_wrapper.F90  catchem_settling_wrapper.F90  catchem_wetdep_wrapper.F90
parameters/: catchem_config.F90  catchem_constants.mod  ddep_data_mod.F90  opt_data_mod.F90  plume_data_mod.F90
src/: CMakeLists.txt  chemspecattr.F90  constants.F90  precision_mod.F90
src/api/: CMakeLists.txt  catchem.F90  catchem_core.F90  catchem_process.F90
src/core/: CATChem_config.yml  CATChem_config.yml.orig  CMakeLists.txt  catchem_core.F90  charpak_mod.F90  chemstate_mod.F90  chmstate_mod.F90  cmn_size_mod.F90  config_mod.F90  config_opt_mod.F90  constants.F90  diagnostic_mod.F90  diagstate_mod.F90  emisstate_mod.F90  error_mod.F90  gridstate_mod.F90  init_mod.F90  input_mod.F90  input_opt_mod.F90  metstate_mod.F90  precision_mod.F90  qfyaml_mod.F90  species_mod.F90  state_mod.F90  test_main.F90  yaml_parser.F90
src/process/: CMakeLists.txt  Process_driver_template.F90  ccpr_fengsha_mod.F90  ccpr_scheme_template.F90  scheme_template.F90
src/process/chem/: CCPr_Chem_Mod.F90  CMakeLists.txt
src/process/drydep/: CCPr_DryDep_Mod.F90  CMakeLists.txt  ccpr_scheme_GOCART_DryDep_mod.F90
src/process/dust/: CCPr_Dust_Mod.F90  CMakeLists.txt  ccpr_dust_common_mod.F90  ccpr_scheme_fengsha_mod.F90  ccpr_scheme_ginoux_mod.F90
src/process/megan/: CCPr_Megan_Mod.F90  ccpr_megan_common_mod.F90  ccpr_scheme_megan_mod.F90
src/process/old/: aero_soa_vbs_data_mod.F90  dep_vertmx_mod.F90  drydep_gocart_mod.F90  drydep_wesely_mod.F90  dust_afwa_mod.F90  dust_fengsha_mod.F90  dust_ginoux_mod.F90  gocart_aerosols_mod.F90  gocart_chem_mod.F90  gocart_diag_mod.F90  gocart_dmsemis_mod.F90  gocart_dust_simple_mod.F90  gocart_seas_default_mod.F90  gocart_seas_ngac_mod.F90  gocart_seas_simple_mod.F90  gocart_settling_mod.F90  opt_aer_out_mod.F90  opt_aer_ra_mod.F90  opt_averaging_mod.F90  opt_driver_mod.F90  opt_gocart_mod.F90  plume_rise_mod.F90  plume_scalar_mod.F90  plume_zero_mod.F90  vash_settling_mod.F90  wetdep_ls_mod.F90
src/process/plumerise/: CCPr_Plumerise_Mod.F90  CCPr_Scheme_Briggs_mod.F90  CCPr_Scheme_Sofiev_Mod.F90  CCPr_Scheme_Sofiev_mod.F90  CMakeLists.txt  ccpr_scheme_sofiev_mod.F90
src/process/seasalt/: CCPr_SeaSalt_Mod.F90  CMakeLists.txt  ccpr_scheme_geos12_mod.F90  ccpr_scheme_gong03_mod.F90  ccpr_scheme_gong97_mod.F90  ccpr_seasalt_common_mod.F90
tests/: CATChem_config.yml  CATChem_emission.yml  CATChem_species.yml  CMakeLists.txt  col.csv  test_chem.f90  test_drydep.f90  test_dust.f90  test_fengsha.f90  test_main.F90  test_plumerise.F90  test_seasalt.F90  testing_mod.f90
tests/Configs/Default/: CATChem_config.yml  CATChem_emission.yml  CATChem_species.yml
tests/Configs/Plumerise/: CATChem_config.yml  CATChem_emission.yml  CATChem_species.yml
tests/MetProfiles/: Profile_1.csv  Profile_AMAZON_Aug_06z.csv  Profile_AMAZON_Aug_12z.csv  Profile_AMAZON_Aug_18z.csv  Profile_NCWCP.csv  Profile_NCWCP_Aug_06z.csv  Profile_NCWCP_Aug_12z.csv  Profile_NCWCP_Aug_18z.csv  Profile_SAHARA.csv  Profile_SAHARA_Aug_06z.csv  Profile_SAHARA_Aug_12z.csv  Profile_SAHARA_Aug_18z.csv
util/: get-vars.py  metutils_mod.F90  vars.yml
