set(_srcs
    charpak_mod.F90
    constants.F90
    diagnostic_mod.F90
    error_mod.F90
    init_mod.F90
    precision_mod.F90
    qfyaml_mod.F90
    species_mod.F90)

add_library(CATChem_core ${_srcs})
set_target_properties(CATChem_core PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
